@@ -27,6 +27,7 @@ no_index:
     - xt
 requires:
   Class::Utils: 0.03
+  DateTime: 0
   Error::Pure: 0.15
   Exporter: 0
   List::MoreUtils: 0
