@@ -1,4 +1,5 @@
 0.26
+ - Add check_datetime() utility.
  - Add doc for
    Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::GrammaticalGender::Masculine.
  - Add doc for
